change the language

--- a/pages/ClipBoard.html
+++ b/pages/ClipBoard.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div class="container">
-<textarea placeholder="...یه چیزی تایپ کن"></textarea>
-<button>کپی کن</button>
+<textarea placeholder="type"></textarea>
+<button> copy</button>
 </div>
 
 
