add text and style

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="index.scc">
 </head>
 <body>
-    
+    <h1>nima</h1>
+    <h2>canada</h2>
+    <p>ma n miram conoda ta mofag shavam</p>
 </body>
 </html>
