--- a/pages/AlarmClock.html
+++ b/pages/AlarmClock.html
@@ -15,7 +15,8 @@
         <div class="controls">
             <select>
                 <option value="hour" selected hidden>hour</option>
-           
+           <option value=""></option>
+           <option value=""></option>
             </select>
         </div>
         <div class="controls">
