change the language

--- a/pages/QrCode.html
+++ b/pages/QrCode.html
@@ -10,12 +10,12 @@
 <body>
     <div class="container">
         <div class="info">
-            <h1>تولید کننده کیو آر کد</h1>
-            <p>یه تکست یا آدرس بده تا کیو ارش رو بهت بدم عزیزم</p>
+            <h1>  create QR_code </h1>
+            <p>write text</p>
         </div>
         <form>
-            <input type="text" placeholder="متن یا آدرس">
-            <button type="button">کد QR تولید</button>
+            <input type="text" placeholder="text our addres  ">
+            <button type="button">QR-Code  </button>
         </form>
         <div class="qr-code hidden">
             <img src="./images/download.png" alt="">
