--- a/pages/QrCode.html
+++ b/pages/QrCode.html
@@ -10,12 +10,12 @@
 <body>
     <div class="container">
         <div class="info">
-            <h1>  create QR_code </h1>
-            <p>write text</p>
+            <h1>  creatیلسیلاسایسیe QR_code </h1>
+            <p>write بنوی</p>
         </div>
         <form>
             <input type="text" placeholder="text our addres  ">
-            <button type="button">QR-Code  </button>
+            <button type="button">QR-Cیباساقode  </button>
         </form>
         <div class="qr-code hidden">
             <img src="./images/download.png" alt="">
